option 2 country code picker

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </body>
 
 <script>
-    //default location - modify IP address to auto change the default country
+    // get default location - modify IP address to auto change the default country
     function getIp(callback) {
         fetch("https://ipinfo.io/102.222.235.128?token=a9ecdfca9a8ec3", {
                 headers: {
