--- a/index2.html
+++ b/index2.html
@@ -9,11 +9,13 @@
 </head>
 
 <body>
-    <h1>Phone Number With Country Code</h1>
-    <form>
-        <input id="phone" name="phone" type="tel" />
-        <button type="submit">Submit</button>
-    </form>
+    <div class="container">
+        <h1>Phone Number With Country Code</h1>
+        <form>
+            <input id="phone" name="phone" type="tel" />
+            <button type="submit">Submit</button>
+        </form>
+    </div>
 
     <script src="build/js/intlTelInput.js"></script>
     <script>
