--- a/index2.html
+++ b/index2.html
@@ -9,13 +9,15 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1>Phone Number With Country Code</h1>
-        <form>
-            <input id="phone" name="phone" type="tel" />
-            <button type="submit">Submit</button>
-        </form>
-    </div>
+    <center>
+        <div class="container">
+            <h1>Phone Number With Country Code</h1>
+            <form>
+                <input id="phone" name="phone" type="tel" />
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+    </center>
 
     <script src="build/js/intlTelInput.js"></script>
     <script>
